--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -10,6 +10,7 @@ jobs:
     # Setup .npmrc file to publish to npm
     - uses: actions/setup-node@v1
       with:
+        always-auth: true
         node-version: '10.x'
         registry-url: 'https://registry.npmjs.org'
     - run: yarn install
