--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,10 +14,7 @@ jobs:
         registry-url: 'https://registry.npmjs.org'
     - run: yarn install
     # Publish to npm
-    - run: git config --global user.name "Gazin"
-    - run: git config --global user.email "gazin@gazin.com.br"
-    - run: npm version ${{ github.event.release.tag_name }}
-    - run: npm publish --access public
+    - run: yarn publish --new-version ${{ github.event.release.tag_name }} --access public
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
     # Setup .npmrc file to publish to GitHub Packages
@@ -27,6 +24,6 @@ jobs:
         # Defaults to the user or organization that owns the workflow file
         scope: '@tigdevs'
     # Publish to GitHub Packages
-    - run: yarn publish
+    - run: yarn publish --new-version ${{ github.event.release.tag_name }}
       env:
         NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
