--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,6 +14,8 @@ jobs:
         registry-url: 'https://registry.npmjs.org'
     - run: yarn install
     # Publish to npm
+    - run: git config --global user.name "Gazin"
+    - run: git config --global user.email "gazin@gazin.com.br"
     - run: yarn publish --new-version ${{ github.event.release.tag_name }} --access public
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
