--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "dist"
   ],
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.6",
     "@chakra-ui/react": "^1.3.3",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
